--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 		<!-- Open Graph / Facebook -->
 		<meta property="og:type" content="website" />
-		<meta property="og:url" content="https://xitkj3.vercel.app/" />
+		<meta property="og:url" content="https://3rplmudikal.vercel.app/" />
 		<meta property="og:title" content="XI TKJ 3" />
 		<meta
 			property="og:description"
@@ -24,7 +24,7 @@
 
 		<!-- Twitter -->
 		<meta property="twitter:card" content="summary_large_image" />
-		<meta property="twitter:url" content="https://xitkj3.vercel.app/" />
+		<meta property="twitter:url" content="https://3rplmudikal.vercel.app/" />
 		<meta property="twitter:title" content="XI TKJ 3" />
 		<meta
 			property="twitter:description"
